--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,7 @@
     <div class="navbar">
         <a href="{{ url_for('index') }}">Поиск</a>
         <a href="{{ url_for('about') }}">О словаре</a>
-        <a href="{{ url_for('gloss_search_page') }}">Поиск по глоссам</a>
+        <a href="{{ url_for('affix_search_page') }}">Поиск по аффиксам</a>
     </div>
 
     {% block content %}{% endblock %}
