--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     body {
         font-family: 'Mulish', sans-serif;
         background-color: #f8f9fa;
-        margin: 40px;
+        margin: auto;
         text-align: center;
     }
     .container {
