Add stats page, log successful queries only, generate daily and top-word bar charts with matplotlib, update README and requirements, modify fuzzy search

--- a/templates/base.html
+++ b/templates/base.html
@@ -39,6 +39,7 @@
         <a href="{{ url_for('index') }}">Поиск</a>
         <a href="{{ url_for('about') }}">О словаре</a>
         <a href="{{ url_for('affix_search_page') }}">Поиск по аффиксам</a>
+        <a href="{{ url_for('stats') }}">Статистика</a>
     </div>
 
     {% block content %}{% endblock %}
